test/resources/parser/failing/ExtLambdaError1.scala
object LambdaError {
  val f: Int => Int = (\(x: Int): Int x + 1);
  Std.printInt(f(1))
}
